--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div class="container">
+      <div class="mouse-field" style="width: 100%; height: 100%; position: absolute;"></div>
+
       <canvas></canvas>
 
       <div class="root"></div>
