--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Tower Defense</title>
     <link rel="stylesheet" type="text/css" href="src/css/style.css" />
+    <link rel="shortcut icon" href="src/assets/td.ico" />
   </head>
   <body>
     <div class="container">
